[workspace]
members = ["crates/zipcodes", "crates/zipcodes-py"]
resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2021"
rust-version = "1.82"
authors = ["Sean Pianka <pianka@eml.cc>"]
license = "MIT"
repository = "https://github.com/seanpianka/zipcodes"
homepage = "https://github.com/seanpianka/zipcodes"

[profile.release]
lto = true
