[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zipcodes"
version = "1.3.0"
authors = [
  { name="Sean Pianka", email="pianka@eml.cc" },
]
description="Query U.S. state zipcodes without SQLite."
readme = "README.md"
requires-python = ">=2.6"
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 5 - Production/Stable",
    # Indicate who your project is intended for
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    # Pick your license as you wish (should match "license" above)
    "License :: OSI Approved :: MIT License",
    # Specify the Python versions you support here. In particular, ensure
    # that you indicate whether you support Python 2, Python 3 or both.
    "Programming Language :: Python :: 2.6",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
keywords = ["zipcode", "zip", "code", "us", "state", "query", "filter", "validate", "sqlite"]

[project.urls]
Homepage = "https://github.com/seanpianka/zipcodes"
Issues = "https://github.com/seanpianka/zipcodes/issues"

[tool.setuptools]
license-files = []
