[build-system]
requires = ["maturin>=1.9,<2"]
build-backend = "maturin"

[project]
name = "zipcodes"
dynamic = ["version"]
authors = [
  { name="Sean Pianka", email="pianka@eml.cc" },
]
description = "Query U.S. state zipcodes without SQLite."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
]
keywords = ["zipcode", "zip", "code", "us", "state", "query", "filter", "validate", "sqlite"]

[project.urls]
Homepage = "https://github.com/seanpianka/zipcodes"
Issues = "https://github.com/seanpianka/zipcodes/issues"

[tool.maturin]
manifest-path = "crates/zipcodes-py/Cargo.toml"
python-source = "python"
module-name = "zipcodes._zipcodes"
features = ["pyo3/abi3-py39"]
