[package]
name = "zipcodes-py"
description = "Python bindings for the zipcodes crate (built with maturin, not published to crates.io)."
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "_zipcodes"
crate-type = ["cdylib"]

[dependencies]
zipcodes = { path = "../zipcodes" }
pyo3 = { version = "0.29", features = ["abi3-py39", "extension-module"] }
serde_json = "1"
